; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/amazon/ena/extr_ena_netdev.c_validate_rx_req_id.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/amazon/ena/extr_ena_netdev.c_validate_rx_req_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ena_ring = type { i64, %struct.TYPE_4__*, i32, %struct.TYPE_3__, i32 }
%struct.TYPE_4__ = type { i32, i32 }
%struct.TYPE_3__ = type { i32 }

@rx_err = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"Invalid rx req_id: %hu\0A\00", align 1
@ENA_REGS_RESET_INV_RX_REQ_ID = common dso_local global i32 0, align 4
@ENA_FLAG_TRIGGER_RESET = common dso_local global i32 0, align 4
@EFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ena_ring*, i64)* @validate_rx_req_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @validate_rx_req_id(%struct.ena_ring* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ena_ring*, align 8
  %5 = alloca i64, align 8
  store %struct.ena_ring* %0, %struct.ena_ring** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.ena_ring*, %struct.ena_ring** %4, align 8
  %8 = getelementptr inbounds %struct.ena_ring, %struct.ena_ring* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp slt i64 %6, %9
  %11 = zext i1 %10 to i32
  %12 = call i64 @likely(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %49

15:                                               ; preds = %2
  %16 = load %struct.ena_ring*, %struct.ena_ring** %4, align 8
  %17 = getelementptr inbounds %struct.ena_ring, %struct.ena_ring* %16, i32 0, i32 1
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %19 = load i32, i32* @rx_err, align 4
  %20 = load %struct.ena_ring*, %struct.ena_ring** %4, align 8
  %21 = getelementptr inbounds %struct.ena_ring, %struct.ena_ring* %20, i32 0, i32 4
  %22 = load i32, i32* %21, align 8
  %23 = load i64, i64* %5, align 8
  %24 = call i32 @netif_err(%struct.TYPE_4__* %18, i32 %19, i32 %22, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i64 %23)
  %25 = load %struct.ena_ring*, %struct.ena_ring** %4, align 8
  %26 = getelementptr inbounds %struct.ena_ring, %struct.ena_ring* %25, i32 0, i32 2
  %27 = call i32 @u64_stats_update_begin(i32* %26)
  %28 = load %struct.ena_ring*, %struct.ena_ring** %4, align 8
  %29 = getelementptr inbounds %struct.ena_ring, %struct.ena_ring* %28, i32 0, i32 3
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %30, align 4
  %33 = load %struct.ena_ring*, %struct.ena_ring** %4, align 8
  %34 = getelementptr inbounds %struct.ena_ring, %struct.ena_ring* %33, i32 0, i32 2
  %35 = call i32 @u64_stats_update_end(i32* %34)
  %36 = load i32, i32* @ENA_REGS_RESET_INV_RX_REQ_ID, align 4
  %37 = load %struct.ena_ring*, %struct.ena_ring** %4, align 8
  %38 = getelementptr inbounds %struct.ena_ring, %struct.ena_ring* %37, i32 0, i32 1
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 1
  store i32 %36, i32* %40, align 4
  %41 = load i32, i32* @ENA_FLAG_TRIGGER_RESET, align 4
  %42 = load %struct.ena_ring*, %struct.ena_ring** %4, align 8
  %43 = getelementptr inbounds %struct.ena_ring, %struct.ena_ring* %42, i32 0, i32 1
  %44 = load %struct.TYPE_4__*, %struct.TYPE_4__** %43, align 8
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 0
  %46 = call i32 @set_bit(i32 %41, i32* %45)
  %47 = load i32, i32* @EFAULT, align 4
  %48 = sub nsw i32 0, %47
  store i32 %48, i32* %3, align 4
  br label %49

49:                                               ; preds = %15, %14
  %50 = load i32, i32* %3, align 4
  ret i32 %50
}

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @netif_err(%struct.TYPE_4__*, i32, i32, i8*, i64) #1

declare dso_local i32 @u64_stats_update_begin(i32*) #1

declare dso_local i32 @u64_stats_update_end(i32*) #1

declare dso_local i32 @set_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
